# substrate-nft

./: Cargo.toml  README.md
docs/: CN.md
nftrml/nft/: Cargo.toml
nftrml/nft/src/: lib.rs  nft_currency.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: main.rs
substrate-nft/: Cargo.toml  README.md
substrate-nft/runtime/: Cargo.toml
substrate-nft/runtime/src/: kitties.rs  lib.rs  linked_item.rs  nft.rs  nft_currency.rs
substrate-nft/runtime/wasm/: Cargo.toml  build.sh
substrate-nft/runtime/wasm/src/: lib.rs
substrate-nft/scripts/: restart.sh
substrate-nft/src/: chain_spec.rs  main.rs  service.rs
substrate-nft/tests/: mod.rs
