[package]
authors = ['Warhol']
build = 'build.rs'
edition = '2018'
name = 'substrate-nft'
version = '2.0.0'

[build-dependencies]
vergen = '3'

[workspace]
members = ['runtime']

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '1.8'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.substrate-nft-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[[bin]]
name = 'substrate-nft'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'
