
[package]
authors = ['Warhol']
edition = '2018'
name = 'nftrml-nft'
version = '0.0.1'
# [dependencies.babe]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# package = 'srml-babe'
# rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

# [dependencies.babe-primitives]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# package = 'substrate-consensus-babe-primitives'
# rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

# [dependencies.client]
# default_features = false
# git = 'https://github.com/paritytech/substrate.git'
# package = 'substrate-client'
# rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

# [dependencies.executive]
# default_features = false
# git = 'https://github.com/paritytech/substrate.git'
# package = 'srml-executive'
# rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

# [dependencies.grandpa]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# package = 'srml-grandpa'
# rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

# [dependencies.indices]
# default_features = false
# git = 'https://github.com/paritytech/substrate.git'
# package = 'srml-indices'
# rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

# [dependencies.offchain-primitives]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# package = 'substrate-offchain-primitives'
# rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

# [dependencies.substrate-session]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

# [dependencies.sudo]
# default_features = false
# git = 'https://github.com/paritytech/substrate.git'
# package = 'srml-sudo'
# rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'ac6a2a783f0e1f4a814cf2add40275730cd41be1'




[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
    "balances/std",
    "primitives/std",
	"runtime-io/std",
	"rstd/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
	"timestamp/std",
    "version/std",
]
