[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-nft-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-nft-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-nft-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
